--- a/gitwork.html
+++ b/gitwork.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>habibi come to dubai</h1>
+    <h1>welcome</h1>
 </body>
 </html>
